--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,8 @@
 ---
+import BaseLayout from "../layouts/BaseLayout.astro";
+import { SITE_TITLE } from "../config";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<BaseLayout>
+    <h1 class="text-2xl text-center my-4">{SITE_TITLE}</h1>
+</BaseLayout>
