feat: Add wallpaper
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,5 @@
 ---
 import Header from "../components/Header.astro";
-import ToggleTheme from "../components/ToggleTheme.astro";
 
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 const {
@@ -11,12 +10,11 @@ const {
 ---
 
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" data-theme="latte">
     <head>
         <Header title={title} description={description} image={image} />
     </head>
     <body>
-        <ToggleTheme />
         <slot />
     </body>
 </html>
