--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,26 @@
 ---
 import BaseLayout from "../layouts/BaseLayout.astro";
-import NavBar from "../components/NavBar.astro";
 import ToggleTheme from "../components/ToggleTheme.astro";
 import Wallpaper from "../components/Wallpaper.astro";
 import { SITE_TITLE } from "../config";
 ---
 
 <BaseLayout>
-    <NavBar />
     <Wallpaper>
         <ToggleTheme />
-        <h1 class="mb-5 text-5xl font-bold">{SITE_TITLE}</h1>
-        <p class="mb-10">
-            杉山禎夫です。日本ヒューレット・パッカードでインフラ/機械学習エンジニアをしています。
-            小さい頃からさつまいもとくりが好きです。なので IMOKURI Blog。
+        <h1 class="mb-5 text-4xl font-bold">{SITE_TITLE}</h1>
+        <p class="mb-2">
+            杉山禎夫です。日本ヒューレット・パッカードでインフラ/機械学習<br
+            />エンジニアをしています。 小さい頃からさつまいもとくりが好きです。
         </p>
+        <button class="btn btn-ghost text-lg"
+            ><a href="/about"><i class="fa-solid fa-user"></i></a></button
+        >
+        <button class="btn btn-ghost text-lg"
+            ><a href="/blog"><i class="fa-solid fa-pencil"></i></a></button
+        >
+        <button class="btn btn-ghost text-lg"
+            ><a href="/project"><i class="fa-solid fa-code"></i></a></button
+        >
     </Wallpaper>
 </BaseLayout>
