--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -2,7 +2,7 @@
 import { SITE_TITLE } from "../config";
 ---
 
-<div class="navbar bg-base-100">
+<header class="navbar bg-base-100">
     <div class="navbar-start">
         <div class="dropdown">
             <label tabindex="0" class="btn btn-ghost lg:hidden">
@@ -12,29 +12,48 @@ import { SITE_TITLE } from "../config";
                 tabindex="0"
                 class="menu menu-compact dropdown-content mt-3 p-2 shadow bg-base-100 rounded-box w-52"
             >
-                <li><a><i class="fa-solid fa-user"></i>About</a></li>
-                <li><a><i class="fa-solid fa-pencil"></i>Blog</a></li>
-                <li><a><i class="fa-solid fa-code"></i>Project</a></li>
+                <li>
+                    <a href="/about"><i class="fa-solid fa-user"></i>About</a>
+                </li>
+                <li>
+                    <a href="/blog"><i class="fa-solid fa-pencil"></i>Blog</a>
+                </li>
+                <li>
+                    <a href="/project"
+                        ><i class="fa-solid fa-code"></i>Project</a
+                    >
+                </li>
             </ul>
         </div>
-        <a class="btn btn-ghost normal-case text-xl">{SITE_TITLE}</a>
+        <a href="/" class="btn btn-ghost normal-case text-xl">{SITE_TITLE}</a>
     </div>
     <div class="navbar-center hidden lg:flex">
         <ul class="menu menu-horizontal px-1">
-            <li><a><i class="fa-solid fa-user"></i>About</a></li>
-            <li><a><i class="fa-solid fa-pencil"></i>Blog</a></li>
-            <li><a><i class="fa-solid fa-code"></i>Project</a></li>
+            <li><a href="/about"><i class="fa-solid fa-user"></i>About</a></li>
+            <li><a href="/blog"><i class="fa-solid fa-pencil"></i>Blog</a></li>
+            <li>
+                <a href="/project"><i class="fa-solid fa-code"></i>Project</a>
+            </li>
         </ul>
     </div>
     <div class="navbar-end">
-        <a class="btn btn-ghost btn-square text-lg"
+        <a
+            href="https://github.com/IMOKURI"
+            target="_blank"
+            class="btn btn-ghost btn-square text-lg"
             ><i class="fa-brands fa-github"></i></a
         >
-        <a class="btn btn-ghost btn-square text-lg"
+        <a
+            href="https://twitter.com/imokurity"
+            target="_blank"
+            class="btn btn-ghost btn-square text-lg"
             ><i class="fa-brands fa-twitter"></i></a
         >
-        <a class="btn btn-ghost btn-square text-lg"
+        <a
+            href="https://kaggle.com/imokuri"
+            target="_blank"
+            class="btn btn-ghost btn-square text-lg"
             ><i class="fa-brands fa-kaggle"></i></a
         >
     </div>
-</div>
+</header>
