--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,19 +8,21 @@ import { SITE_TITLE } from "../config";
 <BaseLayout>
     <Wallpaper>
         <ToggleTheme />
-        <h1 class="mb-5 text-4xl font-bold">{SITE_TITLE}</h1>
-        <p class="mb-2">
-            杉山禎夫です。日本ヒューレット・パッカードでインフラ/機械学習<br
-            />エンジニアをしています。 小さい頃からさつまいもとくりが好きです。
-        </p>
-        <button class="btn btn-ghost text-lg"
-            ><a href="/about"><i class="fa-solid fa-user"></i></a></button
-        >
-        <button class="btn btn-ghost text-lg"
-            ><a href="/blog"><i class="fa-solid fa-pencil"></i></a></button
-        >
-        <button class="btn btn-ghost text-lg"
-            ><a href="/project"><i class="fa-solid fa-code"></i></a></button
-        >
+        <main>
+            <h1 class="mb-5 text-4xl font-bold">{SITE_TITLE}</h1>
+            <p class="mb-2">
+                Hi, I'm SUGIYAMA Yoshio who is an
+                infrastructure / ML engineer at HPE. I like IMO and KURI.
+            </p>
+            <button class="btn btn-ghost text-lg"
+                ><a href="/about"><i class="fa-solid fa-user"></i></a></button
+            >
+            <button class="btn btn-ghost text-lg"
+                ><a href="/blog"><i class="fa-solid fa-pencil"></i></a></button
+            >
+            <button class="btn btn-ghost text-lg"
+                ><a href="/project"><i class="fa-solid fa-code"></i></a></button
+            >
+        </main>
     </Wallpaper>
 </BaseLayout>
