feat: Add bottun title.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -41,19 +41,22 @@ import { SITE_TITLE } from "../config";
             href="https://github.com/IMOKURI"
             target="_blank"
             class="btn btn-ghost btn-square text-lg"
-            ><i class="fa-brands fa-github"></i></a
+            aria-label="GitHub"
+            title="GitHub"><i class="fa-brands fa-github"></i></a
         >
         <a
             href="https://twitter.com/imokurity"
             target="_blank"
             class="btn btn-ghost btn-square text-lg"
-            ><i class="fa-brands fa-twitter"></i></a
+            aria-label="Twitter"
+            title="Twitter"><i class="fa-brands fa-twitter"></i></a
         >
         <a
             href="https://kaggle.com/imokuri"
             target="_blank"
             class="btn btn-ghost btn-square text-lg"
-            ><i class="fa-brands fa-kaggle"></i></a
+            aria-label="Kaggle"
+            title="Kaggle"><i class="fa-brands fa-kaggle"></i></a
         >
     </div>
 </header>
