--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -8,11 +8,11 @@ import Wallpaper from "../components/Wallpaper.astro";
     <Wallpaper>
         <ToggleTheme />
         <h1 class="mb-5 text-4xl font-bold">404 Not Found</h1>
-        <p class="mb-2">
-            お探しのページは見つかりませんでした。。
-        </p>
+        <p class="mb-2">お探しのページは見つかりませんでした。。</p>
         <button class="btn btn-ghost text-lg"
-            ><a href="/"><i class="fa-solid fa-house"></i></a></button
+            ><a href="/" aria-label="Home" title="Home"
+                ><i class="fa-solid fa-house"></i></a
+            ></button
         >
     </Wallpaper>
 </BaseLayout>
