--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,17 +11,23 @@ import { SITE_TITLE } from "../config";
         <main>
             <h1 class="mb-5 text-4xl font-bold">{SITE_TITLE}</h1>
             <p class="mb-2">
-                Hi, I'm SUGIYAMA Yoshio who is an
-                infrastructure / ML engineer at HPE. I like IMO and KURI.
+                Hi, I'm SUGIYAMA Yoshio who is an infrastructure / ML engineer
+                at HPE. I like IMO and KURI.
             </p>
             <button class="btn btn-ghost text-lg"
-                ><a href="/about"><i class="fa-solid fa-user"></i></a></button
+                ><a href="/about" aria-label="About Me" title="About Me"
+                    ><i class="fa-solid fa-user"></i></a
+                ></button
             >
             <button class="btn btn-ghost text-lg"
-                ><a href="/blog"><i class="fa-solid fa-pencil"></i></a></button
+                ><a href="/blog" aria-label="Blog" title="Blog"
+                    ><i class="fa-solid fa-pencil"></i></a
+                ></button
             >
             <button class="btn btn-ghost text-lg"
-                ><a href="/project"><i class="fa-solid fa-code"></i></a></button
+                ><a href="/project" aria-label="Project" title="Project"
+                    ><i class="fa-solid fa-code"></i></a
+                ></button
             >
         </main>
     </Wallpaper>
