--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -22,21 +22,29 @@ const { page } = Astro.props;
 
         {
             page.data.map((post) => (
-                <div class="card card-bordered shadow-xl m-5">
-                    <div class="card-body">
-                        <h2 class="card-title">{post.data.title}</h2>
-                        <p class="text-sm">
-                            Posted on {post.data.date.toLocaleDateString()}
-                        </p>
-                        {post.data.updated > post.data.date ? (
+                <a
+                    href={`/blog/${post.data.date.getFullYear()}/${(
+                        post.data.date.getMonth() + 1
+                    )
+                        .toString()
+                        .padStart(2, "0")}/${post.slug}/`}
+                >
+                    <div class="card card-bordered shadow-xl m-5">
+                        <div class="card-body">
+                            <h2 class="card-title">{post.data.title}</h2>
                             <p class="text-sm">
-                                Updated on{" "}
-                                {post.data.updated.toLocaleDateString()}
+                                Posted on {post.data.date.toLocaleDateString()}
                             </p>
-                        ) : null}
-                        <p>{post.data.description}</p>
+                            {post.data.updated > post.data.date ? (
+                                <p class="text-sm">
+                                    Updated on{" "}
+                                    {post.data.updated.toLocaleDateString()}
+                                </p>
+                            ) : null}
+                            <p>{post.data.description}</p>
+                        </div>
                     </div>
-                </div>
+                </a>
             ))
         }
 
