--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import { SITE_TITLE } from "../config";
         <ToggleTheme />
         <main>
             <h1 class="mb-5 text-4xl font-bold">{SITE_TITLE}</h1>
-            <p class="mb-2">
+            <p class="mb-2 text-lg">
                 Hi, I'm SUGIYAMA Yoshio who is an infrastructure / ML engineer
                 at HPE. I like IMO and KURI.
             </p>
