--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ import ToggleTheme from "../components/ToggleTheme.astro";
 <BaseLayout>
     <NavBar />
     <ToggleTheme />
-    <main class="container mx-auto w-2/3">
+    <main class="container mx-auto w-5/6 lg:w-2/3">
         <h1 class="my-5 text-4xl font-bold">About Me</h1>
         <div class="avatar my-5">
             <div
