--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,22 +15,25 @@ import { SITE_TITLE } from "../config";
                 at HPE. I like IMO and KURI.
             </p>
             <div class="tooltip tooltip-bottom" data-tip="About Me">
-                <button class="btn btn-ghost text-lg"
-                    ><a href="/about"><i class="fa-solid fa-user"></i></a
-                    ></button
-                >
+                <a href="/about">
+                    <button class="btn btn-ghost text-lg">
+                        <i class="fa-solid fa-user"></i>
+                    </button>
+                </a>
             </div>
             <div class="tooltip tooltip-bottom" data-tip="Blog">
-                <button class="btn btn-ghost text-lg"
-                    ><a href="/blog"><i class="fa-solid fa-pencil"></i></a
-                    ></button
-                >
+                <a href="/blog">
+                    <button class="btn btn-ghost text-lg">
+                        <i class="fa-solid fa-pencil"></i>
+                    </button>
+                </a>
             </div>
             <div class="tooltip tooltip-bottom" data-tip="Project">
-                <button class="btn btn-ghost text-lg"
-                    ><a href="/project"><i class="fa-solid fa-code"></i></a
-                    ></button
-                >
+                <a href="/project">
+                    <button class="btn btn-ghost text-lg">
+                        <i class="fa-solid fa-code"></i>
+                    </button>
+                </a>
             </div>
         </main>
     </Wallpaper>
