feat: Add wallpaper.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/components/ProjectPost.astro
+++ b/src/components/ProjectPost.astro
@@ -3,7 +3,7 @@ const { title, description, link } = Astro.props;
 ---
 
 <a href={`/project/${link}`}>
-    <div class="card card-bordered shadow-xl m-10">
+    <div class="card card-bordered shadow-xl m-10 bg-base-100">
         <div class="card-body">
             <h2 class="card-title">{title}</h2>
             <p>{description}</p>
