--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -1,6 +1,7 @@
 ---
 import AllTags from "../../components/AllTags.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
+import BaseWallpaper from "../../components/BaseWallpaper.astro";
 import BlogPost from "../../components/BlogPost.astro";
 import Footer from "../../components/Footer.astro";
 import NavBar from "../../components/NavBar.astro";
@@ -17,36 +18,38 @@ const { page } = Astro.props;
 ---
 
 <BaseLayout>
-    <NavBar />
-    <ToggleTheme />
-    <main class="container mx-auto w-5/6 lg:w-2/3">
-        <AllTags/>
-        <h1 class="my-5 text-4xl font-bold">Blog</h1>
+    <BaseWallpaper>
+        <NavBar />
+        <ToggleTheme />
+        <main class="container mx-auto w-5/6 lg:w-2/3">
+            <AllTags />
+            <h1 class="my-5 text-4xl font-bold">Blog</h1>
 
-        {page.data.map((post) => <BlogPost post={post} />)}
+            {page.data.map((post) => <BlogPost post={post} />)}
 
-        <div class="btn-group flex justify-center m-5">
-            <a href="/blog">
-                <button class="btn btn-outline mx-2">First</button>
-            </a>
-            {
-                page.url.prev && (
-                    <a href={page.url.prev}>
-                        <button class="btn btn-outline mx-2">Prev</button>
-                    </a>
-                )
-            }
-            {
-                page.url.next && (
-                    <a href={page.url.next}>
-                        <button class="btn btn-outline mx-2">Next</button>
-                    </a>
-                )
-            }
-            <a href={`/blog/${page.lastPage}`}>
-                <button class="btn btn-outline mx-2">Last</button>
-            </a>
-        </div>
-    </main>
-    <Footer />
+            <div class="btn-group flex justify-center m-5">
+                <a href="/blog">
+                    <button class="btn btn-outline mx-2">First</button>
+                </a>
+                {
+                    page.url.prev && (
+                        <a href={page.url.prev}>
+                            <button class="btn btn-outline mx-2">Prev</button>
+                        </a>
+                    )
+                }
+                {
+                    page.url.next && (
+                        <a href={page.url.next}>
+                            <button class="btn btn-outline mx-2">Next</button>
+                        </a>
+                    )
+                }
+                <a href={`/blog/${page.lastPage}`}>
+                    <button class="btn btn-outline mx-2">Last</button>
+                </a>
+            </div>
+        </main>
+        <Footer />
+    </BaseWallpaper>
 </BaseLayout>
