feat: add wallpaper to tag page.
Signed-off-by: SUGIYAMA Yoshio <nenegi.01mo@gmail.com>

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -47,6 +47,22 @@ import ToggleTheme from "../components/ToggleTheme.astro";
                 <li data-content="●" class="step step-neutral">Neovim</li>
             </ul>
 
+            <h2 class="my-5 text-2xl font-bold">Certification</h2>
+            <ul class="steps steps-vertical text-lg">
+                <li data-content="●" class="step step-neutral">
+                    2023/2: Informatica Certified Professional - Cloud Data and Application Integration
+                </li>
+                <li data-content="●" class="step step-neutral">
+                    2022/11: Kaggle Competitions Master
+                </li>
+                <li data-content="●" class="step step-neutral">
+                    2021/6: Microsoft Certified Azure Administrator Associate (AZ-104)
+                </li>
+                <li data-content="●" class="step step-neutral">
+                    2020/12: AWS Certified Solutions Architect - Associate (AWS SAA)
+                </li>
+            </ul>
+
             <h2 class="my-5 text-2xl font-bold">Hobby</h2>
             <ul class="steps steps-vertical text-lg">
                 <li data-content="●" class="step step-neutral">Ski</li>
