--- a/src/pages/tag/[tag].astro
+++ b/src/pages/tag/[tag].astro
@@ -1,6 +1,7 @@
 ---
 import AllTags from "../../components/AllTags.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
+import BaseWallpaper from "../../components/BaseWallpaper.astro";
 import BlogPost from "../../components/BlogPost.astro";
 import Footer from "../../components/Footer.astro";
 import NavBar from "../../components/NavBar.astro";
@@ -32,14 +33,16 @@ const { posts } = Astro.props;
 ---
 
 <BaseLayout>
-    <NavBar />
-    <ToggleTheme />
-    <main class="container mx-auto w-5/6 lg:w-2/3">
-        <AllTags/>
-        <h1 class="my-5 text-4xl font-bold">Blog</h1>
-        <h1 class="my-5 text-2xl font-bold">{tag} の記事</h1>
+    <BaseWallpaper>
+        <NavBar />
+        <ToggleTheme />
+        <main class="container mx-auto w-5/6 lg:w-2/3">
+            <AllTags />
+            <h1 class="my-5 text-4xl font-bold">Blog</h1>
+            <h1 class="my-5 text-2xl font-bold">{tag} の記事</h1>
 
-        {posts.map((post) => <BlogPost post={post} />)}
-    </main>
-    <Footer />
+            {posts.map((post) => <BlogPost post={post} />)}
+        </main>
+        <Footer />
+    </BaseWallpaper>
 </BaseLayout>
